Commit of dynamic-card-app

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,9 +20,10 @@
   </div>
 
   <!-- Modal for Editing/Adding -->
-  <app-edit-modal *ngIf="selectedCard"
-                  [card]="selectedCard"
-                  (save)="saveDescription($event)"
-                  (cancel)="cancelEdit()">
+  <app-edit-modal
+    *ngIf="selectedCard"
+    [card]="selectedCard"
+    (save)="saveDescription($event)"
+    (cancel)="cancelEdit()">
   </app-edit-modal>
 </div>
